# AutoViewMem

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  upload_test.md
_upload_test/: README.md  config.py
autoviewmem/: __init__.py  config.py
autoviewmem/datasets/locomo/: filter_dataset.py  prepare_qa.py  split_dataset.py
autoviewmem/evaluation/: evaluate.py  layer_distribution.py  margin_analysis.py  prompts.py
autoviewmem/evaluation/metrics/: llm_judge.py  retrieval_eval.py  utils.py
autoviewmem/memory/: __init__.py  build.py  config.py  log_config.py  search.py
autoviewmem/memory/adaptive/: __init__.py  adaptive_ingestion.py  meta_prompt.txt  schema_discovery.py  utils.py
autoviewmem/memory/core/: __init__.py  hybrid_retriever.py  l0_raw_memory.py  l1_event_frame.py  l2_schema_memory.py  resolution_policy.py
