[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoviewmem"
version = "0.1.0"
description = "Self-configuring adaptive views for conversational long-term memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AutoViewMem Authors" }
]
dependencies = [
  "python-dotenv",
  "openai",
  "qdrant-client",
  "mem0ai",
  "tqdm",
  "jinja2",
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "nltk",
  "rouge-score",
  "bert-score",
  "sentence-transformers",
  "torch",
  "scikit-learn",
  "networkx",
  "psutil",
  "dateparser",
]

[tool.setuptools.packages.find]
include = ["autoviewmem*"]

[tool.setuptools.package-data]
"autoviewmem.memory.adaptive" = ["*.txt"]
